# RisikoAI

./: CMakeLists.txt  DeployQT.bat  README.md
NeuroTitan v1 Seed/Tier0/: Genom_13809.txt
NeuroTitan v1 Seed/Tier1/: Genom_10338.txt  Genom_11426.txt  Genom_15516.txt  Genom_18192.txt  Genom_18552.txt  Genom_22874.txt  Genom_23463.txt  Genom_23474.txt  Genom_30545.txt  Genom_31570.txt  Genom_7946.txt  Genom_8161.txt  Genom_9708.txt
NeuroTitan v1 Seed/Tier10/: Genom_10221.txt  Genom_1028.txt  Genom_10718.txt  Genom_10953.txt  Genom_18309.txt  Genom_1861.txt  Genom_19476.txt  Genom_20627.txt  Genom_21270.txt  Genom_2228.txt  Genom_22388.txt  Genom_23906.txt  Genom_24650.txt  Genom_28548.txt  Genom_29401.txt  Genom_2966.txt  Genom_7865.txt  Genom_7898.txt  Genom_7908.txt  Genom_9344.txt
NeuroTitan v1 Seed/Tier11/: Genom_1090.txt  Genom_13866.txt  Genom_21253.txt  Genom_22654.txt  Genom_24891.txt  Genom_26410.txt  Genom_6771.txt  Genom_8690.txt
NeuroTitan v1 Seed/Tier12/: Genom_11122.txt  Genom_12411.txt  Genom_16826.txt  Genom_19695.txt  Genom_293.txt  Genom_31359.txt  Genom_31429.txt  Genom_32712.txt  Genom_6150.txt
NeuroTitan v1 Seed/Tier13/: Genom_21743.txt  Genom_22236.txt  Genom_23125.txt  Genom_27695.txt  Genom_2920.txt  Genom_3866.txt  Genom_520.txt  Genom_9487.txt
NeuroTitan v1 Seed/Tier14/: Genom_15634.txt  Genom_17237.txt  Genom_19380.txt  Genom_23486.txt  Genom_26939.txt  Genom_27880.txt  Genom_5678.txt  Genom_9128.txt
NeuroTitan v1 Seed/Tier15/: Genom_13013.txt  Genom_17364.txt  Genom_21073.txt  Genom_22068.txt  Genom_24563.txt  Genom_26173.txt  Genom_29794.txt  Genom_6820.txt  Genom_767.txt  Genom_7915.txt  Genom_8468.txt  Genom_8794.txt
NeuroTitan v1 Seed/Tier16/: Genom_12760.txt  Genom_20439.txt  Genom_26777.txt  Genom_29749.txt  Genom_30723.txt
NeuroTitan v1 Seed/Tier17/: Genom_10953.txt  Genom_16673.txt  Genom_17939.txt  Genom_25048.txt  Genom_27492.txt  Genom_28986.txt
NeuroTitan v1 Seed/Tier18/: Genom_11553.txt  Genom_14771.txt  Genom_2162.txt  Genom_24714.txt  Genom_24873.txt  Genom_25220.txt  Genom_28091.txt  Genom_30730.txt  Genom_5931.txt
NeuroTitan v1 Seed/Tier19/: Genom_18368.txt  Genom_19897.txt  Genom_20396.txt  Genom_26013.txt  Genom_3049.txt  Genom_30946.txt  Genom_31574.txt  Genom_5228.txt
NeuroTitan v1 Seed/Tier2/: Genom_11571.txt  Genom_12236.txt  Genom_12722.txt  Genom_13549.txt  Genom_14621.txt  Genom_16519.txt  Genom_21089.txt  Genom_2209.txt  Genom_22229.txt  Genom_2279.txt  Genom_24706.txt  Genom_25437.txt  Genom_2691.txt  Genom_29512.txt  Genom_30161.txt  Genom_31223.txt  Genom_31843.txt  Genom_5548.txt  Genom_5762.txt  Genom_757.txt  Genom_7861.txt
NeuroTitan v1 Seed/Tier20/: Genom_19157.txt  Genom_23579.txt  Genom_27939.txt  Genom_6501.txt  Genom_8111.txt  Genom_9728.txt
NeuroTitan v1 Seed/Tier21/: Genom_17068.txt  Genom_282.txt  Genom_29314.txt  Genom_32682.txt
NeuroTitan v1 Seed/Tier22/: Genom_22262.txt  Genom_25316.txt  Genom_3581.txt
NeuroTitan v1 Seed/Tier23/: Genom_15894.txt
NeuroTitan v1 Seed/Tier3/: Genom_11390.txt  Genom_13571.txt  Genom_14381.txt  Genom_15227.txt  Genom_16639.txt  Genom_17212.txt  Genom_18614.txt  Genom_18945.txt  Genom_19788.txt  Genom_2283.txt  Genom_24839.txt  Genom_25536.txt  Genom_26607.txt  Genom_27804.txt  Genom_30031.txt  Genom_3010.txt  Genom_32376.txt  Genom_32397.txt  Genom_364.txt  Genom_4631.txt  Genom_6585.txt  Genom_7275.txt  Genom_8451.txt  Genom_9968.txt
NeuroTitan v1 Seed/Tier4/: Genom_10368.txt  Genom_10543.txt  Genom_13790.txt  Genom_13881.txt  Genom_13959.txt  Genom_1408.txt  Genom_1489.txt  Genom_17888.txt  Genom_17966.txt  Genom_20295.txt  Genom_20300.txt  Genom_22500.txt  Genom_22504.txt  Genom_22593.txt  Genom_24720.txt  Genom_27264.txt  Genom_32270.txt  Genom_32755.txt  Genom_3283.txt  Genom_7058.txt  Genom_7180.txt  Genom_781.txt  Genom_8889.txt  Genom_9083.txt
NeuroTitan v1 Seed/Tier5/: Genom_10099.txt  Genom_1166.txt  Genom_12728.txt  Genom_12877.txt  Genom_15244.txt  Genom_17506.txt  Genom_1815.txt  Genom_18931.txt  Genom_1904.txt  Genom_21318.txt  Genom_21438.txt  Genom_24743.txt  Genom_2490.txt  Genom_24996.txt  Genom_27475.txt  Genom_27965.txt  Genom_29406.txt  Genom_30081.txt  Genom_31078.txt  Genom_4743.txt  Genom_5475.txt  Genom_7289.txt  Genom_8812.txt
NeuroTitan v1 Seed/Tier6/: Genom_10351.txt  Genom_14131.txt  Genom_17547.txt  Genom_17971.txt  Genom_18694.txt  Genom_18738.txt  Genom_19225.txt  Genom_20366.txt  (+13 more)
cmake/: compilation.cmake  config.cmake  init.cmake  module.cmake  options.cmake  system.cmake
src/Risiko/: CMakeLists.txt  DialogAttack.cpp  DialogAttack.h  DialogAttack.ui  DialogMove.cpp  DialogMove.h  DialogMove.ui  DialogStartAIContest.cpp  DialogStartAIContest.h  DialogStartAIContest.ui  DialogStartGame.cpp  DialogStartGame.h  DialogStartGame.ui  GraphItemConnection.cpp  GraphItemConnection.h  GraphItemLand.cpp  GraphItemLand.h  HumanPlayerGUI.cpp  HumanPlayerGUI.h  HumanPlayerGUI.ui  PlayerAI.cpp  PlayerAI.h  PlayerHuman.cpp  PlayerHuman.h  PlayerNeutral.cpp  PlayerNeutral.h  QGameFlowViewer.cpp  QGameFlowViewer.h  QGameFlowViewer.ui  RiskFlowControl.cpp  RiskFlowControl.h  RiskMapGraphicsView.cpp  RiskMapGraphicsView.h  RiskMapScene.cpp  RiskMapScene.h  RiskMapScene.ui  main.cpp  resource.h  risiko.cpp  risiko.h  (+3 more)
src/Risiko/Resources/: map.txt
src/Risiko_SDK/: CMakeLists.txt  Player.cpp  Player.h  RiskAI.cpp  RiskAI.h  RiskCard.cpp  RiskCard.h  RiskCardDeck.cpp  RiskCardDeck.h  RiskDefines.h  RiskGameLogic.cpp  RiskGameLogic.h  RiskMap.cpp  RiskMap.h  RiskMapConnection.cpp  RiskMapConnection.h  RiskMapContinent.cpp  RiskMapContinent.h  RiskMapLand.cpp  RiskMapLand.h
src/RiskAINeuroTitan/: CMakeLists.txt  NeuralNet.cpp  NeuralNet.h  RiskAI_NeuroTitan.cpp  RiskAI_NeuroTitan.h  RiskMapEvaluator.h  SMatrix.cpp  SMatrix.h  SVector.cpp  SVector.h  dllmain.cpp  stdafx.cpp
src/RiskAISimple/: CMakeLists.txt  RiskAI_Simple.cpp  RiskAI_Simple.h  RiskMapEvaluator.cpp  RiskMapEvaluator.h  dllmain.cpp  stdafx.cpp  stdafx.h
src/RiskAITitanNet/: CMakeLists.txt  RiskAI_TitanNet.cpp  RiskAI_TitanNet.h  RiskMapEvaluator.cpp  dllmain.cpp
(+53 files in other folders)
